--- a/Aier360/Controllers/校园/School.storyboard
+++ b/Aier360/Controllers/校园/School.storyboard
@@ -215,7 +215,7 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="rCg-gH-AlS">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="rCg-gH-AlS">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -280,10 +280,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="rCg-gH-AlS" firstAttribute="leading" secondItem="Dho-ko-Gxz" secondAttribute="leadingMargin" constant="-16" id="2sA-Pd-Oie"/>
                             <constraint firstItem="rCg-gH-AlS" firstAttribute="top" secondItem="cbd-R8-x66" secondAttribute="bottom" id="ATp-CL-MeN"/>
                             <constraint firstItem="z71-CB-Zop" firstAttribute="top" secondItem="rCg-gH-AlS" secondAttribute="bottom" id="BHv-7P-e0t"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="rCg-gH-AlS" secondAttribute="trailing" constant="-16" id="L2h-2p-Bvm"/>
+                            <constraint firstAttribute="trailing" secondItem="rCg-gH-AlS" secondAttribute="trailing" id="L40-b0-wcS"/>
+                            <constraint firstItem="rCg-gH-AlS" firstAttribute="leading" secondItem="Dho-ko-Gxz" secondAttribute="leading" id="qeH-ko-FlR"/>
                         </constraints>
                     </view>
                     <connections>
@@ -307,7 +307,7 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="kZI-eS-J1K">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="kZI-eS-J1K">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -330,8 +330,8 @@
                         <constraints>
                             <constraint firstItem="0d6-Jb-7Xg" firstAttribute="top" secondItem="kZI-eS-J1K" secondAttribute="bottom" id="4J9-r8-Nnw"/>
                             <constraint firstItem="kZI-eS-J1K" firstAttribute="top" secondItem="EYV-20-3L0" secondAttribute="bottom" id="6EP-58-i2I"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="kZI-eS-J1K" secondAttribute="trailing" constant="-16" id="ODP-9h-jjG"/>
-                            <constraint firstItem="kZI-eS-J1K" firstAttribute="leading" secondItem="kex-4S-YmH" secondAttribute="leadingMargin" constant="-16" id="hJn-G2-qzc"/>
+                            <constraint firstAttribute="trailing" secondItem="kZI-eS-J1K" secondAttribute="trailing" id="Ctc-Pm-AVg"/>
+                            <constraint firstItem="kZI-eS-J1K" firstAttribute="leading" secondItem="kex-4S-YmH" secondAttribute="leading" id="HHU-De-3QW"/>
                         </constraints>
                     </view>
                     <connections>
@@ -401,7 +401,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入图形验证码" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kxu-KH-9o2">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入图形验证码" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kxu-KH-9o2">
                                 <rect key="frame" x="0.0" y="20" width="600" height="45"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -419,8 +419,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="kxu-KH-9o2" firstAttribute="top" secondItem="4dy-ul-kGB" secondAttribute="bottom" id="5rt-Ym-KCc"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="kxu-KH-9o2" secondAttribute="trailing" constant="-16" id="8q2-se-PFI"/>
-                            <constraint firstItem="kxu-KH-9o2" firstAttribute="leading" secondItem="xge-4A-ck3" secondAttribute="leadingMargin" constant="-16" id="YZ4-Dm-AnN"/>
+                            <constraint firstAttribute="trailing" secondItem="kxu-KH-9o2" secondAttribute="trailing" id="RlP-VR-NvX"/>
+                            <constraint firstItem="kxu-KH-9o2" firstAttribute="leading" secondItem="xge-4A-ck3" secondAttribute="leading" id="ZPw-ay-bJI"/>
                         </constraints>
                     </view>
                     <connections>
@@ -443,7 +443,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="cZb-93-PH2">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="cZb-93-PH2">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -464,10 +464,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="cZb-93-PH2" firstAttribute="leading" secondItem="5nY-FT-iSJ" secondAttribute="leadingMargin" constant="-16" id="EWi-PQ-lVQ"/>
                             <constraint firstItem="62f-Mk-OSt" firstAttribute="top" secondItem="cZb-93-PH2" secondAttribute="bottom" id="UNn-Xr-fcR"/>
                             <constraint firstItem="cZb-93-PH2" firstAttribute="top" secondItem="5nY-FT-iSJ" secondAttribute="topMargin" id="VSn-5L-U3F"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="cZb-93-PH2" secondAttribute="trailing" constant="-16" id="hy7-6a-h7M"/>
+                            <constraint firstAttribute="trailing" secondItem="cZb-93-PH2" secondAttribute="trailing" id="X6N-NW-YX7"/>
+                            <constraint firstItem="cZb-93-PH2" firstAttribute="leading" secondItem="5nY-FT-iSJ" secondAttribute="leading" id="qxG-qN-uY7"/>
                         </constraints>
                     </view>
                     <connections>
