--- a/Aier360/Controllers/校园/校园动态/Dynamic.storyboard
+++ b/Aier360/Controllers/校园/校园动态/Dynamic.storyboard
@@ -1,7 +1,98 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Select Square Label View Controller-->
+        <scene sceneID="vmN-A3-VZk">
+            <objects>
+                <viewController storyboardIdentifier="ZXSelectSquareLabelViewController" id="svJ-tR-LQp" customClass="ZXSelectSquareLabelViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Wby-dd-JF6"/>
+                        <viewControllerLayoutGuide type="bottom" id="g6q-qG-QLy"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Qvo-CC-7q8">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hvM-ZB-vRB">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ZXTeacherPickCell" rowHeight="55" id="vPi-W2-E5q" customClass="ZXTeacherPickCell">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="55"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vPi-W2-E5q" id="KaQ-bn-Zba">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="54"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="head_default" translatesAutoresizingMaskIntoConstraints="NO" id="HrM-mO-NAk">
+                                                    <rect key="frame" x="15" y="10" width="35" height="35"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="35" id="Kei-hs-rDh"/>
+                                                        <constraint firstAttribute="width" constant="35" id="N4k-3f-RcW"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="announcement_teacherpick_bg" translatesAutoresizingMaskIntoConstraints="NO" id="JPh-gk-Wkq">
+                                                    <rect key="frame" x="569" y="19" width="16" height="16"/>
+                                                </imageView>
+                                                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="announcement_teacherpick_select" translatesAutoresizingMaskIntoConstraints="NO" id="WtV-bu-nLf">
+                                                    <rect key="frame" x="572" y="22" width="11" height="11"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRu-0N-TjG">
+                                                    <rect key="frame" x="65" y="17" width="40" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="dRu-0N-TjG" firstAttribute="leading" secondItem="HrM-mO-NAk" secondAttribute="trailing" constant="15" id="1Yw-zJ-rgZ"/>
+                                                <constraint firstAttribute="centerY" secondItem="HrM-mO-NAk" secondAttribute="centerY" id="6PU-Pg-RJp"/>
+                                                <constraint firstAttribute="centerY" secondItem="WtV-bu-nLf" secondAttribute="centerY" id="Heu-1K-fqc"/>
+                                                <constraint firstItem="HrM-mO-NAk" firstAttribute="leading" secondItem="KaQ-bn-Zba" secondAttribute="leading" constant="15" id="If2-tt-cJX"/>
+                                                <constraint firstAttribute="trailing" secondItem="JPh-gk-Wkq" secondAttribute="trailing" constant="15" id="dG6-WK-TEb"/>
+                                                <constraint firstAttribute="trailing" secondItem="WtV-bu-nLf" secondAttribute="trailing" constant="17" id="lKp-Ep-TZX"/>
+                                                <constraint firstAttribute="centerY" secondItem="JPh-gk-Wkq" secondAttribute="centerY" id="nxC-Pc-ns7"/>
+                                                <constraint firstAttribute="centerY" secondItem="dRu-0N-TjG" secondAttribute="centerY" id="yBE-cA-C3s"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <outlet property="headImage" destination="HrM-mO-NAk" id="n6W-xZ-ARC"/>
+                                            <outlet property="nameLabel" destination="dRu-0N-TjG" id="fQG-f8-Rah"/>
+                                            <outlet property="remarkImageView" destination="WtV-bu-nLf" id="IX1-od-Wsj"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="svJ-tR-LQp" id="cnC-N9-YIZ"/>
+                                    <outlet property="delegate" destination="svJ-tR-LQp" id="8eh-HC-L1J"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="hvM-ZB-vRB" secondAttribute="trailing" id="LVc-s9-1Qb"/>
+                            <constraint firstItem="g6q-qG-QLy" firstAttribute="top" secondItem="hvM-ZB-vRB" secondAttribute="bottom" id="RoI-7d-j7n"/>
+                            <constraint firstItem="hvM-ZB-vRB" firstAttribute="leading" secondItem="Qvo-CC-7q8" secondAttribute="leading" id="V6u-Bh-R41"/>
+                            <constraint firstItem="hvM-ZB-vRB" firstAttribute="top" secondItem="Wby-dd-JF6" secondAttribute="bottom" id="Y8K-zH-yHv"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="hvM-ZB-vRB" id="8pO-Kb-LoC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XoI-BK-mNG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="732" y="448"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="announcement_teacherpick_bg" width="16" height="16"/>
+        <image name="announcement_teacherpick_select" width="11" height="11"/>
+        <image name="head_default" width="149" height="149"/>
+    </resources>
 </document>
